feat: add support for custom function routes
