# go/models/function_route.go
@@ -1,0 +1,49 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// FunctionRoute function route
+//
+// swagger:model functionRoute
+type FunctionRoute struct {
+
+	// expression
+	Expression string `json:"expression,omitempty"`
+
+	// literal
+	Literal string `json:"literal,omitempty"`
+
+	// pattern
+	Pattern string `json:"pattern,omitempty"`
+}
+
+// Validate validates this function route
+func (m *FunctionRoute) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *FunctionRoute) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *FunctionRoute) UnmarshalBinary(b []byte) error {
+	var res FunctionRoute
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
